--- a/frontend/guestPage.html
+++ b/frontend/guestPage.html
@@ -10,7 +10,9 @@
 
 <body>
     <div class="container">
-        <h1>Library Management</h1>
+        <h1>Welcome to our library!
+            <p style="font-size: smaller;">here you can see what books we have and if they are available to loan!</p>
+        </h1>
         <div>
             <h3>Search Books</h3>
             <form id="search-books-form">
